# cover

./: .eslintrc.json  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  package.json  test.bat  test.html  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: release.yml
src/module/: cover.js
src/module/DaScript/: daScript.js  runtimecontroller.js
static/: module.json  test.das
wasm/src/: main.cpp  main.h
